--- a/IDS.ipynb
+++ b/IDS.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# Uploading datasets for training,testing and prediction\n",
-    "train = pd.read_csv('C:/DataSets/partOfTraining/a part of training and testing set/UNSW_NB15_training-set.csv')\n",
+    "train = pd.read_csv('/UNSW_NB15_training-set.csv')\n",
     "pred = pd.read_csv('C:/DataSets/partOfTraining/a part of training and testing set/UNSW_NB15_testing-set.csv')"
    ]
   },
@@ -2984,7 +2984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
