--- a/IDS.ipynb
+++ b/IDS.ipynb
@@ -47,8 +47,8 @@
    "outputs": [],
    "source": [
     "# Uploading datasets for training,testing and prediction\n",
-    "train = pd.read_csv('/UNSW_NB15_training-set.csv')\n",
-    "pred = pd.read_csv('C:/DataSets/partOfTraining/a part of training and testing set/UNSW_NB15_testing-set.csv')"
+    "train = pd.read_csv('./Datasets/UNSW_NB15_training-set.csv')\n",
+    "pred = pd.read_csv('./DataSets/UNSW_NB15_testing-set.csv')"
    ]
   },
   {
