--- a/IDS.ipynb
+++ b/IDS.ipynb
@@ -99,28 +99,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d081752c",
+   "execution_count": 10,
+   "id": "444efd91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = readData()\n",
-    "intCols = standardScaling(dataset)\n",
-    "objCols = LabelEncoding(dataset)\n",
-    "train_x = pd.concat([intCols, objCols],axis=1)\n",
-    "train_y = dataset['attack_cat']\n",
-    "trainingOutput = mlTraining(train_x, train_y)\n",
-    "model = trainingOutput[0]\n",
-    "X_train = trainingOutput[1]\n",
-    "X_test = trainingOutput[2]\n",
-    "Y_train = trainingOutput[3]\n",
-    "Y_test = trainingOutput[4]"
+    "def trainingResults(model, X_train, Y_train):\n",
+    "    train_accuracy = metrics.accuracy_score(Y_train, model.predict(X_train))\n",
+    "    train_confusion_matrix = metrics.confusion_matrix(Y_train, model.predict(X_train))\n",
+    "    train_classification = metrics.classification_report(Y_train, model.predict(X_train))\n",
+    "    print()\n",
+    "    print('============================== Decision Tree Classifier Model Evaluation ==============================')\n",
+    "    print (\"Model Accuracy:\" \"\\n\", train_accuracy)\n",
+    "    print()\n",
+    "    print(\"Confusion matrix:\" \"\\n\", train_confusion_matrix)\n",
+    "    print()\n",
+    "    print(\"Classification report:\" \"\\n\", train_classification) \n",
+    "    print()\n",
+    "    return [train_accuracy, train_confusion_matrix, train_classification]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "444efd91",
+   "execution_count": 11,
+   "id": "da065ebe",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def testingResults(model, X_test, Y_test):\n",
+    "    test_accuracy = metrics.accuracy_score(Y_test, model.predict(X_test))\n",
+    "    test_confusion_matrix = metrics.confusion_matrix(Y_test, model.predict(X_test))\n",
+    "    test_classification = metrics.classification_report(Y_test, model.predict(X_test))\n",
+    "    print()\n",
+    "    print('============================== Decision Tree Classifier Model Test Results ==============================')\n",
+    "    print()\n",
+    "    print (\"Model Accuracy:\" \"\\n\", test_accuracy)\n",
+    "    print()\n",
+    "    print(\"Confusion matrix:\" \"\\n\", test_confusion_matrix)\n",
+    "    print()\n",
+    "    print(\"Classification report:\" \"\\n\", test_classification) \n",
+    "    print()       \n",
+    "    return [test_accuracy, test_confusion_matrix, test_classification]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5d8d9701",
    "metadata": {},
    "outputs": [
     {
@@ -162,34 +189,7 @@
       "     macro avg       1.00      1.00      1.00     16466\n",
       "  weighted avg       1.00      1.00      1.00     16466\n",
       "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "accuracy = metrics.accuracy_score(Y_train, model.predict(X_train))\n",
-    "confusion_matrix = metrics.confusion_matrix(Y_train, model.predict(X_train))\n",
-    "classification = metrics.classification_report(Y_train, model.predict(X_train))\n",
-    "print()\n",
-    "print('============================== Decision Tree Classifier Model Evaluation ==============================')\n",
-    "print (\"Model Accuracy:\" \"\\n\", accuracy)\n",
-    "print()\n",
-    "print(\"Confusion matrix:\" \"\\n\", confusion_matrix)\n",
-    "print()\n",
-    "print(\"Classification report:\" \"\\n\", classification) \n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "da065ebe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "\n",
       "============================== Decision Tree Classifier Model Test Results ==============================\n",
       "\n",
@@ -231,27 +231,20 @@
     }
    ],
    "source": [
-    "test_accuracy = metrics.accuracy_score(Y_test, model.predict(X_test))\n",
-    "test_confusion_matrix = metrics.confusion_matrix(Y_test, model.predict(X_test))\n",
-    "classification = metrics.classification_report(Y_test, model.predict(X_test))\n",
-    "print()\n",
-    "print('============================== Decision Tree Classifier Model Test Results ==============================')\n",
-    "print()\n",
-    "print (\"Model Accuracy:\" \"\\n\", accuracy)\n",
-    "print()\n",
-    "print(\"Confusion matrix:\" \"\\n\", confusion_matrix)\n",
-    "print()\n",
-    "print(\"Classification report:\" \"\\n\", classification) \n",
-    "print()        "
+    "dataset = readData()\n",
+    "intCols = standardScaling(dataset)\n",
+    "objCols = LabelEncoding(dataset)\n",
+    "train_x = pd.concat([intCols, objCols],axis=1)\n",
+    "train_y = dataset['attack_cat']\n",
+    "trainingOutput = mlTraining(train_x, train_y)\n",
+    "model = trainingOutput[0]\n",
+    "X_train = trainingOutput[1]\n",
+    "X_test = trainingOutput[2]\n",
+    "Y_train = trainingOutput[3]\n",
+    "Y_test = trainingOutput[4]\n",
+    "modelTraining = trainingResults(model, X_train, Y_train)\n",
+    "modelTesting = testingResults(model, X_test, Y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ed29a25",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
