Mail Code integrated

--- a/IDS.ipynb
+++ b/IDS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "ebc6a1ec",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sklearn\n",
+    "import json\n",
     "\n",
     "# Preprocessing purpose\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -27,8 +28,10 @@
     "\n",
     "# Mail Notification\n",
     "import smtplib\n",
-    "from email.mime.text import MIMEText\n",
+    "from email.mime.base import MIMEBase\n",
     "from email.mime.multipart import MIMEMultipart\n",
+    "from email.mime.text import MIMEText\n",
+    "from email import encoders\n",
     "\n",
     "# Ignore warnings\n",
     "import warnings\n",
@@ -37,20 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "1722ed4d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Uploading datasets for training,testing and prediction\n",
     "def readData():\n",
-    "    dataset = pd.read_csv('./Datasets/UNSW_NB15_training-set.csv')\n",
-    "    return dataset"
+    "    dataset = pd.read_csv('./Data/UNSW_NB15_training-set.csv')\n",
+    "    with open('./Data/mailCreds.json', 'r') as file:\n",
+    "        creds = json.load(file)\n",
+    "    return [dataset, creds]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "e9fb7ebf",
    "metadata": {},
    "outputs": [],
@@ -67,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "8b3823da",
    "metadata": {},
    "outputs": [],
@@ -85,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "ed3b4857",
    "metadata": {},
    "outputs": [],
@@ -99,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "444efd91",
    "metadata": {},
    "outputs": [],
@@ -107,21 +112,19 @@
     "def trainingResults(model, X_train, Y_train):\n",
     "    train_accuracy = metrics.accuracy_score(Y_train, model.predict(X_train))\n",
     "    train_confusion_matrix = metrics.confusion_matrix(Y_train, model.predict(X_train))\n",
-    "    train_classification = metrics.classification_report(Y_train, model.predict(X_train))\n",
+    "    train_classification = metrics.classification_report(Y_train, model.predict(X_train), output_dict=True)\n",
     "    print()\n",
     "    print('============================== Decision Tree Classifier Model Evaluation ==============================')\n",
     "    print (\"Model Accuracy:\" \"\\n\", train_accuracy)\n",
     "    print()\n",
     "    print(\"Confusion matrix:\" \"\\n\", train_confusion_matrix)\n",
     "    print()\n",
-    "    print(\"Classification report:\" \"\\n\", train_classification) \n",
-    "    print()\n",
     "    return [train_accuracy, train_confusion_matrix, train_classification]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "da065ebe",
    "metadata": {
     "scrolled": true
@@ -131,23 +134,102 @@
     "def testingResults(model, X_test, Y_test):\n",
     "    test_accuracy = metrics.accuracy_score(Y_test, model.predict(X_test))\n",
     "    test_confusion_matrix = metrics.confusion_matrix(Y_test, model.predict(X_test))\n",
-    "    test_classification = metrics.classification_report(Y_test, model.predict(X_test))\n",
+    "    test_classification = metrics.classification_report(Y_test, model.predict(X_test), output_dict=True)\n",
     "    print()\n",
     "    print('============================== Decision Tree Classifier Model Test Results ==============================')\n",
     "    print()\n",
     "    print (\"Model Accuracy:\" \"\\n\", test_accuracy)\n",
     "    print()\n",
     "    print(\"Confusion matrix:\" \"\\n\", test_confusion_matrix)\n",
-    "    print()\n",
-    "    print(\"Classification report:\" \"\\n\", test_classification) \n",
-    "    print()       \n",
+    "    print()    \n",
     "    return [test_accuracy, test_confusion_matrix, test_classification]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5d8d9701",
+   "execution_count": 31,
+   "id": "b58f09f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_report_to_excel(report, filename):\n",
+    "    # Convert classification report to DataFrame\n",
+    "    report_df = pd.DataFrame(report).transpose()\n",
+    "    \n",
+    "    # Save DataFrame to Excel file\n",
+    "    with pd.ExcelWriter(filename, engine='openpyxl') as writer:\n",
+    "        report_df.to_excel(writer, sheet_name='Classification Report')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ad9f23fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def send_email(subject, body, to_email, from_email, password, attachment_path):\n",
+    "    # Create the email message\n",
+    "    msg = MIMEMultipart()\n",
+    "    msg['From'] = from_email\n",
+    "    msg['To'] = to_email\n",
+    "    msg['Subject'] = subject\n",
+    "\n",
+    "    # Attach the email body to the message\n",
+    "    msg.attach(MIMEText(body, 'plain'))\n",
+    "    with open(attachment_path, 'rb') as attachment:\n",
+    "        part = MIMEBase('application', 'octet-stream')\n",
+    "        part.set_payload(attachment.read())\n",
+    "        encoders.encode_base64(part)\n",
+    "        part.add_header(\n",
+    "            'Content-Disposition',\n",
+    "            f'attachment; filename= {attachment_path}',\n",
+    "        )\n",
+    "        msg.attach(part)\n",
+    "\n",
+    "    try:\n",
+    "        # Set up the server\n",
+    "        server = smtplib.SMTP_SSL('smtp.gmail.com', 465)\n",
+    "\n",
+    "        # Log in to the email account\n",
+    "        server.login(from_email, password)\n",
+    "\n",
+    "        # Send the email\n",
+    "        server.sendmail(from_email, to_email, msg.as_string())\n",
+    "\n",
+    "        # Close the server\n",
+    "        server.quit()\n",
+    "\n",
+    "        print(\"Email sent successfully!\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to send email: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "832428e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[dataset, creds] = readData()\n",
+    "intCols = standardScaling(dataset)\n",
+    "objCols = LabelEncoding(dataset)\n",
+    "train_x = pd.concat([intCols, objCols],axis=1)\n",
+    "train_y = dataset['attack_cat']\n",
+    "[model, X_train, X_test, Y_train, Y_test] = mlTraining(train_x, train_y)\n",
+    "from_email = creds['email_id']\n",
+    "auth_password = creds['password']\n",
+    "subject = \"Classification Report\"\n",
+    "body = \"Please find the attached classification report.\"\n",
+    "to_email = \"tsric12345@gmail.com\"\n",
+    "excel_filename = 'classification_report.xlsx'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a90bccd2",
    "metadata": {},
    "outputs": [
     {
@@ -171,25 +253,6 @@
       " [   0    0    0    0    0    0    0    0   82    0]\n",
       " [   0    0    0    0    0    0    0    0    0    9]]\n",
       "\n",
-      "Classification report:\n",
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "      Analysis       1.00      1.00      1.00       128\n",
-      "      Backdoor       1.00      1.00      1.00       116\n",
-      "           DoS       1.00      1.00      1.00       767\n",
-      "      Exploits       1.00      1.00      1.00      2231\n",
-      "       Fuzzers       1.00      1.00      1.00      1248\n",
-      "       Generic       1.00      1.00      1.00      3867\n",
-      "        Normal       1.00      1.00      1.00      7305\n",
-      "Reconnaissance       1.00      1.00      1.00       713\n",
-      "     Shellcode       1.00      1.00      1.00        82\n",
-      "         Worms       1.00      1.00      1.00         9\n",
-      "\n",
-      "      accuracy                           1.00     16466\n",
-      "     macro avg       1.00      1.00      1.00     16466\n",
-      "  weighted avg       1.00      1.00      1.00     16466\n",
-      "\n",
-      "\n",
       "\n",
       "============================== Decision Tree Classifier Model Test Results ==============================\n",
       "\n",
@@ -207,43 +270,34 @@
       " [    3     5   153   277    42     3     0  2275    25     0]\n",
       " [    0     2    47    50    30    18     0    21   127     1]\n",
       " [    0     0     7    22     3     1     0     0     1     1]]\n",
-      "\n",
-      "Classification report:\n",
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "      Analysis       0.10      0.10      0.10       549\n",
-      "      Backdoor       0.06      0.06      0.06       467\n",
-      "           DoS       0.34      0.33      0.33      3322\n",
-      "      Exploits       0.68      0.67      0.68      8901\n",
-      "       Fuzzers       0.77      0.77      0.77      4814\n",
-      "       Generic       0.98      0.98      0.98     15004\n",
-      "        Normal       1.00      1.00      1.00     29695\n",
-      "Reconnaissance       0.80      0.82      0.81      2783\n",
-      "     Shellcode       0.37      0.43      0.40       296\n",
-      "         Worms       0.03      0.03      0.03        35\n",
-      "\n",
-      "      accuracy                           0.88     65866\n",
-      "     macro avg       0.51      0.52      0.52     65866\n",
-      "  weighted avg       0.88      0.88      0.88     65866\n",
-      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "dataset = readData()\n",
-    "intCols = standardScaling(dataset)\n",
-    "objCols = LabelEncoding(dataset)\n",
-    "train_x = pd.concat([intCols, objCols],axis=1)\n",
-    "train_y = dataset['attack_cat']\n",
-    "trainingOutput = mlTraining(train_x, train_y)\n",
-    "model = trainingOutput[0]\n",
-    "X_train = trainingOutput[1]\n",
-    "X_test = trainingOutput[2]\n",
-    "Y_train = trainingOutput[3]\n",
-    "Y_test = trainingOutput[4]\n",
     "modelTraining = trainingResults(model, X_train, Y_train)\n",
-    "modelTesting = testingResults(model, X_test, Y_test)"
+    "modelTesting = testingResults(model, X_test, Y_test)\n",
+    "report_dict = modelTesting[2]\n",
+    "save_report_to_excel(report_dict, excel_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9212827c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Email sent successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Send the email with the classification report\n",
+    "send_email(subject, body, to_email, from_email, auth_password, excel_filename)"
    ]
   }
  ],
