Flask app added

--- a/IDS.ipynb
+++ b/IDS.ipynb
@@ -218,8 +218,8 @@
     "train_x = pd.concat([intCols, objCols],axis=1)\n",
     "train_y = dataset['attack_cat']\n",
     "[model, X_train, X_test, Y_train, Y_test] = mlTraining(train_x, train_y)\n",
-    "from_email = creds['email_id']\n",
-    "auth_password = creds['password']\n",
+    "from_email = creds['emailDet']['email_id']\n",
+    "auth_password = creds['emailDet']['password']\n",
     "subject = \"Classification Report\"\n",
     "body = \"Please find the attached classification report.\"\n",
     "to_email = \"tsric12345@gmail.com\"\n",
